--- a/src/layouts/HomeLayout.astro
+++ b/src/layouts/HomeLayout.astro
@@ -13,6 +13,7 @@ const { title } = Astro.props;
     <body>
         <a href="/">Home</a>
         <a href="/about/">About</a>
+        <a href="/blog/">My Blog</a>
         <slot />
     </body>
 </html>
