--- a/src/layouts/HomeLayout.astro
+++ b/src/layouts/HomeLayout.astro
@@ -1,4 +1,6 @@
 ---
+import Navbar from "../components/Navbar.astro";
+import Footer from '../components/Footer.astro'
 const { title } = Astro.props;
 ---
 
@@ -11,9 +13,8 @@ const { title } = Astro.props;
         <title>{title}</title>
     </head>
     <body>
-        <a href="/">Home</a>
-        <a href="/about/">About</a>
-        <a href="/blog/">My Blog</a>
+        <Navbar />
         <slot />
+        <Footer />
     </body>
 </html>
