--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,14 +1,12 @@
 ---
 import HomeLayout from '../layouts/HomeLayout.astro'
 const { pageTitle } = Astro.props
+const allPosts = await Astro.glob('./posts/*.md');
 ---
 
 <HomeLayout pageTitle={pageTitle}>
     <h1>{pageTitle}</h1>
     <ul>
-        <li>
-            <a href="/posts/post-1">New Kid on the block</a>
-            <a href="/posts/post-2">Wumbo</a>
-        </li>
+        {allPosts.map((post)=> <li><a href={post.url}>{post.frontmatter.title}</a></li>)}
     </ul>
 </HomeLayout>
